-Add: Hungarian translation (by Dr. Orosz Tamás)
-Add: French translation (by Yannick Ernult)
-Fix: Call neroAacEnc with the correct bitrate
-Fix: Undo mp3gain and aacgain changes correctly
-Fix: Loading the wrong Replay Gain plugin
-Change: Make it possible to overwrite hidden lame parameters with the additional parameters option

0.9.95 (1.0.0 rc3):
-Add: Updated czech translation (by Pavel Fric)
-Add: Read Replay Gain in more formats
-Add: Save last 5 output directory paths (accessible through the directory combobox)
-Add: Option to specify how the Replay Gain scanner should group files
-Change: Close soundkonverter if --autoclose was passed, even if the main window is visible
-Change: Remove internal Replay Gain calculation from lame plugin since it's not writing tags
-Change: Use PATH variable to find backends
-Change: Activate Replay Gain tool when adding files
-Fix: Display correct conversion options in the conversion options editor with multiple files selected
-Fix: Apply output directory to the conversion options input widget
-Fix: Don't update conversion options or tags in the conversion options editor with multiple files selected if they don't match
-Fix: Make edit conversion options/tags buttons in the conversion options editor work
-Fix: Fix possible crash in the log viewer
-Fix: Handle files with quotation characters (") correctly
-Fix: When adding multiple files of different formats, the formats wouldn't be recognized correctly

0.9.94 (1.0.0 rc2):
-Add: Updated czech translation (by Pavel Fric)
-Fix: Tint items in the Replay Gain scanner red while calculating Replay Gain
-Fix: Make the Replay Gain scanner skip file with calculated tags
-Fix: Ensure items in the file list and Replay Gain file list get redrawn after an update
-Fix: Hide open directory dialog before scanning the directory to show the progressbar
-Fix: Don't crash when deleting file list items
-Fix: Don't recognize vorbis files as flac