@@ -13,6 +13,8 @@ soundkonverter_codec_faac::soundkonverter_codec_faac( QObject *parent, const QSt
     binaries["faad"] = "";
 
     allCodecs += "aac";
+    allCodecs += "m4a";
+    allCodecs += "mp4";
     allCodecs += "wav";
 }
 
@@ -37,11 +39,35 @@ QList<ConversionPipeTrunk> soundkonverter_codec_faac::codecTable()
     newTrunk.data.hasInternalReplayGain = false;
     table.append( newTrunk );
 
+    newTrunk.codecFrom = "wav";
+    newTrunk.codecTo = "m4a";
+    newTrunk.rating = 100;
+    newTrunk.enabled = ( binaries["faac"] != "" );
+    newTrunk.problemInfo = i18n("In order to encode aac files, you need to install 'faac'.\nSince faac inludes a patented codec, it may not be included in the default installation of your distribution. Many distributions offer faac in an additional software repository."); // FIXME change to aac to m4a after string-freeze
+    newTrunk.data.hasInternalReplayGain = false;
+    table.append( newTrunk );
+
     newTrunk.codecFrom = "aac";
     newTrunk.codecTo = "wav";
     newTrunk.rating = 100;
     newTrunk.enabled = ( binaries["faad"] != "" );
     newTrunk.problemInfo = i18n("In order to decode aac files, you need to install 'faad'.\nSince faad inludes a patented codec, it may not be included in the default installation of your distribution. Many distributions offer faad in an additional software repository.");
+    newTrunk.data.hasInternalReplayGain = false;
+    table.append( newTrunk );
+
+    newTrunk.codecFrom = "m4a";
+    newTrunk.codecTo = "wav";
+    newTrunk.rating = 100;
+    newTrunk.enabled = ( binaries["faad"] != "" );
+    newTrunk.problemInfo = i18n("In order to decode aac files, you need to install 'faad'.\nSince faad inludes a patented codec, it may not be included in the default installation of your distribution. Many distributions offer faad in an additional software repository."); // FIXME change to aac to m4a after string-freeze
+    newTrunk.data.hasInternalReplayGain = false;
+    table.append( newTrunk );
+
+    newTrunk.codecFrom = "mp4";
+    newTrunk.codecTo = "wav";
+    newTrunk.rating = 100;
+    newTrunk.enabled = ( binaries["faad"] != "" );
+    newTrunk.problemInfo = i18n("In order to decode aac files, you need to install 'faad'.\nSince faad inludes a patented codec, it may not be included in the default installation of your distribution. Many distributions offer faad in an additional software repository."); // FIXME change to aac to mp4 after string-freeze
     newTrunk.data.hasInternalReplayGain = false;
     table.append( newTrunk );
 
@@ -58,13 +84,30 @@ BackendPlugin::FormatInfo soundkonverter_codec_faac::formatInfo( const QString& 
         info.lossless = false;
         info.description = i18n("Advanced Audio Coding is a lossy and popular audio format."); // http://en.wikipedia.org/wiki/Advanced_Audio_Coding
         info.mimeTypes.append( "audio/aac" );
-        info.mimeTypes.append( "audio/aacp" );
-        info.mimeTypes.append( "audio/mp4" );
-        info.mimeTypes.append( "video/mp4" );
+//         info.mimeTypes.append( "audio/aacp" );
         info.extensions.append( "aac" );
-        info.extensions.append( "3gp" );
-        info.extensions.append( "mp4" );
+//         info.extensions.append( "3gp" );
+//         info.extensions.append( "mp4" );
+//         info.extensions.append( "m4a" );
+    }
+    else if( codecName == "m4a" )
+    {
+        info.lossless = false;
+        info.description = i18n("Advanced Audio Coding is a lossy and popular audio format."); // http://en.wikipedia.org/wiki/Advanced_Audio_Coding // FIXME change to aac to mp4 after string-freeze
+        info.mimeTypes.append( "audio/mp4" );
+        info.mimeTypes.append( "audio/x-m4a" );
         info.extensions.append( "m4a" );
+        info.extensions.append( "f4a" );
+        info.extensions.append( "aac" );
+    }
+    else if( codecName == "mp4" )
+    {
+        info.lossless = false;
+//         info.description = i18n("Advanced Audio Coding is a lossy and popular audio format."); // http://en.wikipedia.org/wiki/Advanced_Audio_Coding // change to aac to mp4 after string-freeze
+        info.mimeTypes.append( "video/mp4" );
+        info.extensions.append( "mp4" );
+        info.extensions.append( "m4v" );
+        info.extensions.append( "f4v" );
     }
     else if( codecName == "wav" )
     {
@@ -135,7 +178,7 @@ QStringList soundkonverter_codec_faac::convertCommand( const KUrl& inputFile, co
     QStringList command;
     ConversionOptions *conversionOptions = _conversionOptions;
 
-    if( outputCodec == "aac" )
+    if( outputCodec == "aac" || outputCodec == "m4a" )
     {
         command += binaries["faac"];
         if( conversionOptions->qualityMode == ConversionOptions::Quality )
