@@ -19,7 +19,7 @@ soundkonverter_codec_ffmpeg::soundkonverter_codec_ffmpeg( QObject *parent, const
     codecMap["mp3"] = "libmp3lame";
     codecMap["flac"] = "flac";
     codecMap["wma"] = "wmav2";
-    codecMap["aac"] = "libfaac"; // aac
+//     codecMap["aac"] = "libfaac"; // aac - removed from ffmpeg ???
     codecMap["ac3"] = "ac3";
     codecMap["alac"] = "alac";
     codecMap["mp2"] = "mp2";
@@ -40,7 +40,7 @@ QList<ConversionPipeTrunk> soundkonverter_codec_ffmpeg::codecTable()
 {
     QList<ConversionPipeTrunk> table;
     
-    // decode
+    /// decode
     fromCodecs += "wav";
     fromCodecs += "ogg vorbis";
     fromCodecs += "mp3";
@@ -58,6 +58,7 @@ QList<ConversionPipeTrunk> soundkonverter_codec_ffmpeg::codecTable()
     fromCodecs += "ape";
 //     fromCodecs += "eac3";
     fromCodecs += "speex";
+    fromCodecs += "m4a";
     fromCodecs += "mp1";
     fromCodecs += "mpc";
     fromCodecs += "shorten";
@@ -67,10 +68,10 @@ QList<ConversionPipeTrunk> soundkonverter_codec_ffmpeg::codecTable()
     fromCodecs += "tta";
     fromCodecs += "wavpack";
     fromCodecs += "ra";
-    // containers
+    /// containers
     fromCodecs += "3gp";
     fromCodecs += "rm";
-    // video
+    /// video
     fromCodecs += "avi";
     fromCodecs += "mkv";
     fromCodecs += "ogv";
@@ -81,15 +82,16 @@ QList<ConversionPipeTrunk> soundkonverter_codec_ffmpeg::codecTable()
     fromCodecs += "wmv";
     fromCodecs += "rv";
 
-    // encode
+    /// encode
     toCodecs += "wav";
     toCodecs += "ogg vorbis";
     toCodecs += "mp3";
     toCodecs += "flac";
     toCodecs += "wma";
-    toCodecs += "aac";
+//     toCodecs += "aac"; // libfaac removed from ffmpeg ???
     toCodecs += "ac3";
     toCodecs += "alac";
+//     toCodecs += "m4a"; // libfaac removed from ffmpeg ???
     toCodecs += "mp2";
 //     toCodecs += "sonic";
 //     toCodecs += "sonic lossless";
@@ -100,7 +102,8 @@ QList<ConversionPipeTrunk> soundkonverter_codec_ffmpeg::codecTable()
     {
         for( int j=0; j<toCodecs.count(); j++ )
         {
-            if( fromCodecs.at(i) == "wav" && toCodecs.at(j) == "wav" ) continue;
+            if( fromCodecs.at(i) == "wav" && toCodecs.at(j) == "wav" )
+                continue;
           
             ConversionPipeTrunk newTrunk;
             newTrunk.codecFrom = fromCodecs.at(i);
@@ -177,13 +180,11 @@ BackendPlugin::FormatInfo soundkonverter_codec_ffmpeg::formatInfo( const QString
         info.lossless = false;
         info.description = i18n("Advanced Audio Coding is a lossy and popular audio format."); // http://en.wikipedia.org/wiki/Advanced_Audio_Coding
         info.mimeTypes.append( "audio/aac" );
-        info.mimeTypes.append( "audio/aacp" );
-        info.mimeTypes.append( "audio/mp4" );
-        info.mimeTypes.append( "video/mp4" );
+//         info.mimeTypes.append( "audio/aacp" );
         info.extensions.append( "aac" );
-        info.extensions.append( "3gp" );
-        info.extensions.append( "mp4" );
-        info.extensions.append( "m4a" );
+//         info.extensions.append( "3gp" );
+//         info.extensions.append( "mp4" );
+//         info.extensions.append( "m4a" );
     }
     else if( codecName == "ac3" ) // TODO description
     {
@@ -199,6 +200,16 @@ BackendPlugin::FormatInfo soundkonverter_codec_ffmpeg::formatInfo( const QString
 //         info.mimeTypes.append( "audio/x-ms-wma" );
         info.extensions.append( "m4a" );
         info.extensions.append( "mp4" );
+    }
+    else if( codecName == "m4a" )
+    {
+        info.lossless = false;
+        info.description = i18n("Advanced Audio Coding is a lossy and popular audio format."); // http://en.wikipedia.org/wiki/Advanced_Audio_Coding // FIXME change to aac to mp4 after string-freeze
+        info.mimeTypes.append( "audio/mp4" );
+        info.mimeTypes.append( "audio/x-m4a" );
+        info.extensions.append( "m4a" );
+        info.extensions.append( "f4a" );
+        info.extensions.append( "aac" );
     }
     else if( codecName == "mp2" )
     {
@@ -419,10 +430,11 @@ BackendPlugin::FormatInfo soundkonverter_codec_ffmpeg::formatInfo( const QString
     else if( codecName == "mp4" )
     {
         info.lossless = false;
-//         info.description = i18n("");
+//         info.description = i18n("Advanced Audio Coding is a lossy and popular audio format."); // http://en.wikipedia.org/wiki/Advanced_Audio_Coding // change to aac to mp4 after string-freeze
         info.mimeTypes.append( "video/mp4" );
         info.extensions.append( "mp4" );
         info.extensions.append( "m4v" );
+        info.extensions.append( "f4v" );
     }
     else if( codecName == "flv" )
     {
@@ -533,7 +545,7 @@ int soundkonverter_codec_ffmpeg::convert( const KUrl& inputFile, const KUrl& out
         }
         command += "\"" + outputFile.toLocalFile().replace("\"","\\\"") + "\"";
     }
-    else // NOTE really necessary?
+    else
     {
         command += binaries["ffmpeg"];
         command += "-i";
@@ -560,7 +572,8 @@ int soundkonverter_codec_ffmpeg::convert( const KUrl& inputFile, const KUrl& out
 
 QStringList soundkonverter_codec_ffmpeg::convertCommand( const KUrl& inputFile, const KUrl& outputFile, const QString& inputCodec, const QString& outputCodec, ConversionOptions *_conversionOptions, TagData *tags, bool replayGain )
 {
-    if( !_conversionOptions ) return QStringList();
+    if( !_conversionOptions )
+        return QStringList();
     
     QStringList command;
     ConversionOptions *conversionOptions = _conversionOptions;
