@@ -6,6 +6,7 @@
 -Fix: Undo mp3gain and aacgain changes correctly
 -Fix: Loading the wrong Replay Gain plugin
 -Change: Make it possible to overwrite hidden lame parameters with the additional parameters option
+-Change: Distinguish between aac and m4a files, where aac is the transport stream and m4a an mp4 container with aac data; mp4 is the video container
 
 0.9.95 (1.0.0 rc3):
 -Add: Updated czech translation (by Pavel Fric)
